tests/paczka1/small_fuzzy/12668754.err
Error in line 1: hg2qs A163 6,2
Error in line 4: MoVYbU61 S523 72,3
